--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,16 @@
                 <version>1.3.174</version>
             </dependency>
             <dependency>
-                <groupId>org.eclipse.persistence</groupId>
-                <artifactId>eclipselink</artifactId>
-                <version>2.5.1</version>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>4.3.5.Final</version>
             </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>4.3.5.Final</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
@@ -143,6 +149,13 @@
                 <artifactId>spring-time-infra</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!--support for jsr 310 datatypes for hibernate -->
+            <dependency>
+                <groupId>org.jadira.usertype</groupId>
+                <artifactId>usertype.extended</artifactId>
+                <version>3.2.0.GA</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <build>
