--- a/spring-time-infrastructure/pom.xml
+++ b/spring-time-infrastructure/pom.xml
@@ -49,9 +49,17 @@
             <artifactId>h2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+<dependency>
+	<groupId>org.jadira.usertype</groupId>
+	<artifactId>usertype.extended</artifactId>
+</dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
