--- a/spring-time-web/pom.xml
+++ b/spring-time-web/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>            
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
@@ -63,7 +67,7 @@
             <groupId>ch.thp.proto</groupId>
             <artifactId>spring-time-infra</artifactId>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>ch.thp.proto</groupId>
             <artifactId>spring-time-helloworld</artifactId>
         </dependency>
