--- a/pom.xml
+++ b/pom.xml
@@ -56,22 +56,10 @@
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>4.3.5.Final</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
                 <version>1.5.2.RELEASE</version>
-            </dependency>
-            <!-- app server => servet-only-->
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>3.1.0</version>
-            </dependency>
-            <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-web-api</artifactId>
-                <version>7.0</version>
             </dependency>
             
             <!-- spring -->
@@ -85,25 +73,21 @@
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
@@ -120,6 +104,18 @@
                 <version>${spring.sec.version}</version>
             </dependency>
             
+            <!--swagger -->
+            <dependency>
+                <groupId>com.mangofactory</groupId>
+                <artifactId>swagger-springmvc</artifactId>
+                <version>0.8.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>swagger-ui</artifactId>
+                <version>2.0.17</version>
+            </dependency>
+
 
             <!--logging definitions -->
             <dependency>
@@ -144,7 +140,6 @@
                 <artifactId>junit</artifactId>
                 <version>4.10</version>
             </dependency>
-            
             
             <!-- jackson zirkus für ungestörtes mappen von joda zu rest -->
             <dependency>
@@ -180,7 +175,17 @@
                 <artifactId>usertype.extended</artifactId>
                 <version>3.2.0.GA</version>
             </dependency>
-
+            <!-- ee / servlet api -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax</groupId>
+                <artifactId>javaee-web-api</artifactId>
+                <version>7.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -238,6 +243,12 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.8</version>
+                </plugin>
+
             </plugins>
         </pluginManagement>
         
