reactivated user module

--- a/spring-time-helloworld/pom.xml
+++ b/spring-time-helloworld/pom.xml
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
+            <scope>providded</scope>
         </dependency>
         <dependency>
             <groupId>org.jadira.usertype</groupId>
