--- a/spring-time-web/pom.xml
+++ b/spring-time-web/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>spring-time-helloworld</artifactId>
         </dependency>
         <dependency>
+                <groupId>ch.thp.proto</groupId>
+                <artifactId>spring-time-user</artifactId>
+            </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
         </dependency>
