--- a/spring-time-web/pom.xml
+++ b/spring-time-web/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>spring-time-infra</artifactId>
         </dependency>
         <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.4.0</version>
+            </dependency>
+        <dependency>
             <groupId>ch.thp.proto</groupId>
             <artifactId>spring-time-helloworld</artifactId>
         </dependency>
