method authorization support with spring security, uniqueconstraints, expanded user example, expanded helloworld example

--- a/spring-time-helloworld/pom.xml
+++ b/spring-time-helloworld/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <scope>providded</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jadira.usertype</groupId>
