--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.12.6</version>
+                <version>1.14.4</version>
             </dependency>
             <!-- database / orm-->
             <dependency>
@@ -168,12 +168,17 @@
                 <artifactId>spring-time-helloworld</artifactId>
                 <version>${project.version}</version>
             </dependency>
-        
             <dependency>
                 <groupId>ch.thp.proto</groupId>
                 <artifactId>spring-time-user</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>ch.thp.proto</groupId>
+                <artifactId>spring-time-stamp</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            
             <!--support for jsr 310 datatypes for hibernate -->
             <dependency>
                 <groupId>org.jadira.usertype</groupId>
