--- a/spring-time-user/pom.xml
+++ b/spring-time-user/pom.xml
@@ -60,6 +60,10 @@
             <groupId>ch.thp.proto</groupId>
             <artifactId>spring-time-infra</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
