--- a/spring-time-web/pom.xml
+++ b/spring-time-web/pom.xml
@@ -62,18 +62,21 @@
             <artifactId>spring-time-infra</artifactId>
         </dependency>
         <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>2.4.0</version>
-            </dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <dependency>
             <groupId>ch.thp.proto</groupId>
             <artifactId>spring-time-helloworld</artifactId>
         </dependency>
         <dependency>
-                <groupId>ch.thp.proto</groupId>
-                <artifactId>spring-time-user</artifactId>
-            </dependency>
+            <groupId>ch.thp.proto</groupId>
+            <artifactId>spring-time-user</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.thp.proto</groupId>
+            <artifactId>spring-time-stamp</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
