--- a/spring-time-web/pom.xml
+++ b/spring-time-web/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>logback-classic</artifactId>
         </dependency>            
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
